fix integration tests

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -1,5 +1,5 @@
-FROM ghcr.io/streamingfast/substreams:5e372ed as substreams
-FROM bufbuild/buf as buf
+FROM ghcr.io/streamingfast/substreams:5e372ed AS substreams
+FROM bufbuild/buf AS buf
 FROM rust:latest
 
 WORKDIR /app
@@ -10,6 +10,7 @@ COPY --from=substreams /app/substreams /usr/local/bin/substreams
 COPY --from=buf /usr/local/bin/buf /usr/local/bin/buf
 
 RUN rustup target add wasm32-unknown-unknown
+
 RUN chmod +x /usr/local/bin/substreams && \
     chmod +x /app/entrypoint.sh
 
