--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: Integration tests
 
 on:
   push:
@@ -48,7 +48,7 @@ jobs:
             ${{ runner.os }}-go-
 
       - name: Run Tests
-        run: go test ./...
+        run: go test -v ./...
 
       - name: Build
         run: go build ./...
