--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,14 +48,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - name: Install Docker
-        if: runner.os == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker.io
-            
       - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
