--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,6 +48,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
+      - name: "Setup Qemu"
+        uses: docker/setup-qemu-action@v2
+
+      - name: "Setup Docker BuildX"
+        uses: docker/setup-buildx-action@v2
+        
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
