--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,12 +12,8 @@ on:
 jobs:
   test:
     name: Test
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     if: "${{ !startsWith(github.event.head_commit.message, 'GitBook: [#') }}"
-    strategy:
-      matrix:
-        go-version: [ 1.21.x ]
-        os: [ubuntu-latest, macos-latest]
 
     env:
       TEST_LOCAL_CODEGEN: "true"
@@ -31,7 +27,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: ">=1.19.0"
+          cache: true
 
       - name: Cache Go modules
         uses: actions/cache@v3
@@ -48,12 +45,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - name: "Setup Qemu"
-        uses: docker/setup-qemu-action@v2
-
-      - name: "Setup Docker BuildX"
-        uses: docker/setup-buildx-action@v2
-        
       - name: Log in to the Container registry
         uses: docker/login-action@v3
         with:
