--- a/evm-minimal/templates/.gitignore
+++ b/evm-minimal/templates/.gitignore
@@ -1,8 +1,1 @@
-# Compiled source files
-target/
-
-# Sink data when running any sinker
-sink-data/
-
-# The spkg packed by the subtreams cli
-*.spkg
+{{ template "gitignore_usage" }}
