--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,10 +10,6 @@ on:
       - codegen-cmd
       - staging
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -35,17 +31,17 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v1
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate docker tags/labels from github build context
         id: meta
-        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        uses: docker/metadata-action@v4
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ghcr.io/${{ github.repository }}
           tags: |
             type=ref,event=tag
             type=sha
@@ -70,4 +66,4 @@ jobs:
         if: ${{ failure() }}
         run: |
           curl https://argocd.streamingfast.io/updater/failed --oauth2-bearer ${{ secrets.GITOPS_TOKEN }} \
-            -d repo=${{ github.repository }} -d run_id=${{ github.run_id }}
+            -d repo=${{ github.repository }} -d run_id=${{ github.run_id }} -d "ref=${{ github.ref }}"
